# Resumidor-de-Podcast

./: .gitignore  1. audio_extractor.py  2. podcast_resumer.py  podcast_resumer.py  podcast_resumer_old.py  pyproject.toml  requirements.txt  summary.md  transcript.txt  whiserx.py
